<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_add_to_list"
        android:icon="@drawable/ic_plus"
        android:title="@string/text_add"
        app:showAsAction="always">
        <menu >
            <item
                android:id="@+id/action_add_to_library"
                android:title="@string/text_add_to_libary" />
            <item
                android:id="@+id/action_add_to_reading_list"
                android:title="@string/text_add_to_reading_list" />
            <item
                android:id="@+id/action_create_new_list"
                android:icon="@drawable/ic_plus"
                android:title="@string/text_new_reading_list" />
        </menu>
    </item>
    <item
        android:id="@+id/action_share_story"
        android:title="@string/text_share" />
    <item
        android:id="@+id/action_story_report"
        android:title="@string/text_report" />
</menu>