<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_reload_library"
        android:title="@string/text_reload" />

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort">
        <menu>
            <group
                android:id="@+id/sortgroup"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_default"
                    android:title="@string/sort_by_default" />
                <item
                    android:id="@+id/menu_sort_title"
                    android:title="@string/sort_by_title" />
                <item
                    android:id="@+id/menu_sort_author"
                    android:title="@string/sort_by_author" />
                <item
                    android:id="@+id/menu_sort_added"
                    android:title="@string/sort_by_added_date" />
            </group>
        </menu>
    </item>
</menu>