<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.UserSetting.NotificationSettingFragment"
    android:orientation="vertical"
    android:weightSum="10">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarNotificationSetting"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_weight="1"
        android:background="@color/colorThemeWhite"
        android:elevation="10dp"
        android:title="@string/text_notification"
        android:titleTextColor="?attr/colorPrimary">
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="9">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:text="@string/text_messages"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"></TextView>
                    <CheckBox
                        android:id="@+id/checkInboxNotificationSetting"
                        android:checked="true"
                        android:text="@string/text_inbox"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>
                    <CheckBox
                        android:id="@+id/checkMessageBoardNotificationSetting"
                        android:checked="true"
                        android:text="@string/text_message_board"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>
                    <CheckBox
                        android:id="@+id/checkNewCommentNotificationSetting"
                        android:checked="true"
                        android:text="@string/text_new_comment"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:text="@string/text_others"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"></TextView>
                    <CheckBox
                        android:id="@+id/checkLibraryNotificationSetting"
                        android:checked="true"
                        android:text="@string/text_library"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>
                    <CheckBox
                        android:id="@+id/checkNewFollowerNotificationSetting"
                        android:checked="true"
                        android:text="@string/text_new_followers"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>
                    <CheckBox
                        android:id="@+id/checkVoteMyStoryNotificationSetting"
                        android:checked="true"
                        android:text="@string/text_vote_on_my_stories"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>
                    <CheckBox
                        android:id="@+id/checkUpdateFollowingNotificationSetting"
                        android:checked="true"
                        android:text="@string/text_update_from_following"
                        android:textSize="16sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</LinearLayout>