<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.UserSetting.DarkModeFragment"
    android:orientation="vertical"

    android:weightSum="10">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarDarkModeSetting"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_weight="1"
        android:elevation="10dp"
        android:background="@color/colorThemeWhite"
        android:title="@string/text_dark_mode"
        android:titleTextColor="?attr/colorPrimary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="9">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/checkOnDarkMode"
                android:checked="true"
                android:text="@string/text_on"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />
            <CheckBox
                android:id="@+id/checkOffDarkMode"
                android:checked="true"
                android:text="@string/text_off"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>