<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.UserSetting.UserSettingFragment"
    android:orientation="vertical"
    android:weightSum="10">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarUserSetting"
        android:title="@string/text_setting"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorThemeWhite"
        android:layout_weight="1">
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/linearLayoutUserSetting"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/text_application_settings"
                    android:textColor="@color/colorThemeBlack"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewUserSetting_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">
                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:text="@string/text_preferred_stories"
                    android:textColor="@color/colorThemeBlack"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewUserSetting_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    >
                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:text="@string/text_others"
                    android:textColor="@color/colorThemeBlack"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewUserSetting_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">
                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>