<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="10dp">


    <EditText
        android:id="@+id/editBlankEditText"
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:layout_margin="10dp"
        android:gravity="top|left"
        android:hint="@string/text_tags"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/editBlankEditText">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@android:color/transparent"
            card_view:cardElevation="0dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground">
            <Button
                android:id="@+id/btnPositiveBlankEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_confirm_change"
                android:textAllCaps="false"
                android:background="@drawable/transparent_cover_blur"
                android:elevation="10dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:drawableTint="?attr/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.cardview.widget.CardView>
        <View
            android:layout_width="40dp"
            android:layout_height="20dp"/>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@android:color/transparent"
            card_view:cardElevation="0dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground">
            <Button
                android:id="@+id/btnNegativeBlankEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_cancel"
                android:textAllCaps="false"
                android:background="@drawable/transparent_cover_blur"
                android:elevation="10dp"
                android:padding="4dp"
                android:drawableTint="?attr/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>